Ejercicio de imagenes

--- a/src/Index.html
+++ b/src/Index.html
@@ -15,19 +15,19 @@
       </nav>
       <section>
          <p>En HTML5, una sección (&lt;section&gt;) representa una sección genérica de un documento o aplicación, que generalmente se compone de un contenido temático con un encabezado. </p>
-         <img src="../image1.jpg" alt="">
+         <img src="../image1.jpg" alt="imagen 1">
       </section>
       <article>
          <p>En HTML5, la etiqueta &lt;article&gt; se utiliza para representar contenido independiente y autocontenido que puede ser distribuido o reutilizado de manera independiente</p>
-         <img src="image2.jpg" alt="">
+         <img src="image2.jpg" alt="imagen 2">
       </article>
       <aside>
          En HTML5, la etiqueta &lt;aside&gt; se utiliza para representar contenido que está relacionado con el contenido principal de una página, pero no es esencial para su comprensión
-         <img src="./Assets/image3.jpg" alt="">
+         <img src="./Assets/image3.jpg" alt="imagen 3">
       </aside>
       <footer>
          <p>En HTML5, el elemento &lt;footer&gt; representa la sección de pie de página de una página web, un documento o una sección, generalmente ubicada en la parte inferior. </p>
-         <img src="./Assets/extras/image4.jpg" alt="">
+         <img src="./Assets/extras/image4.jpg" alt="imagen 4">
       </footer>
    </body>
 </html>
